| Bug #55713 | innochecksum is NOT built with large file support enabled | ||
|---|---|---|---|
| Submitted: | 3 Aug 2010 13:32 | Modified: | 16 Aug 2011 17:31 |
| Reporter: | Oli Sennhauser | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server: Compiling | Severity: | S3 (Non-critical) |
| Version: | 5.1.48, 5.1.50 | OS: | Linux (32-bit) |
| Assigned to: | Hery Ramilison | CPU Architecture: | Any |
| Tags: | innochecksum, large file support | ||
[3 Aug 2010 13:32]
Oli Sennhauser
[5 Aug 2010 7:35]
Sveta Smirnova
Thank you for the report. I can not repeat described behavior neither with binaries built with BUILD/compile-pentium64-debug-max, nor with mysql-5.1.49-linux-x86_64-glibc23 package. Which package do you use?
[10 Aug 2010 9:46]
Oli Sennhauser
> mysql-5.1.44-linux-i686-glibc23/bin/innochecksum ibdata1 error statting file: Value too large for defined data type > mysql-5.1.48-linux-i686-glibc23/bin/innochecksum ibdata1 error statting file: Value too large for defined data type > mysql-cluster-gpl-7.1.4b-linux-i686-glibc23/bin/innochecksum ibdata1 error statting file: Value too large for defined data type
[10 Aug 2010 20:07]
Sveta Smirnova
Thank you for the feedback. Verified as described: 32-bit version of innochecksum is not built with large file support by default, although it can be built in such a mode.
[16 Aug 2011 17:31]
Hery Ramilison
Fix commited in 5.1 branch.
