2nd fix for Bug #55713  innochecksum is NOT built with large file support enabled